# gammakit

./: .gitignore  Cargo.toml  __program.txt  grammarsimple.txt  nbody.txt  nbody3.txt  parsing stages.txt  program.txt  readme.md  readme.txt
examples/: general.rs  general.txt  generator.rs  generator.txt  nbody.rs  nbody.txt  nop.rs
src/: ast.rs  bookkeeping.rs  bytecode.rs  compiler.rs  defaultgrammar.txt  disassembler.rs  grammar.rs  interpreter.rs  lib.rs  main.rs  matches.rs  oldbadcode.rs  parser.rs  regexholder.rs  strings.rs
src/interpreter/: bindings.rs  control.rs  internal.rs  jumping.rs  manipulation.rs  mod.rs  simulation.rs  types.rs  variableaccess.rs
src/interpreter/types/: ops.rs
