[package]
name = "gammakit"
version = "0.1.0"
authors = ["wareya <wareya@gmail.com>"]
edition = "2018"
exclude = [
    "trash/*",
]

description = "A toy programming language. No stability guarantees."
license = "Apache-2.0"

repository = "https://github.com/wareya/gammakit"

categories = ["parser-implementations"]

readme = "readme.md"

[lib]
doc = true

[dependencies]
regex = "1"

[profile.bench]
opt-level = 3
debug = 2
incremental = true
overflow-checks = true

[profile.test]
opt-level = 3
overflow-checks = true
