[package]
name = "gammakit"
version = "0.1.0"
authors = ["wareya <wareya@gmail.com>"]
edition = "2018"
exclude = [
    "trash/*",
]

description = "A toy programming language. No stability guarantees."
license = "Apache-2.0"

repository = "https://github.com/wareya/gammakit"

categories = ["parser-implementations"]

readme = "readme.md"


[features]
compiler_bytecode_desync_debugging = []
stack_len_debugging = []
compiler_invalid_execution_debugging = []
broken_compiler_debugging = []
code_bounds_debugging = []
stack_access_debugging = []
debugging = ["compiler_bytecode_desync_debugging", "stack_len_debugging", "compiler_invalid_execution_debugging", "broken_compiler_debugging", "code_bounds_debugging", "stack_access_debugging"]


[lib]
doc = true

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std"]

[profile.release]
opt-level = 3
debug-assertions = false
debug = 0
incremental = false
overflow-checks = false
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
incremental = false
overflow-checks = true
panic = "abort"

[profile.bench]
opt-level = 3
debug-assertions = false
debug = 0
incremental = false
overflow-checks = false

[profile.test]
opt-level = 1
debug = true
incremental = false
overflow-checks = true

